# gmail-spam

./: .gitignore  README.md  gen_layer.sh  generate_lambda_deployment_package.sh  pyproject.toml
gmail_spam/: __main__.py  constants.py
gmail_spam/src/: dynamo.py  lambda_fn.py  s3.py
gmail_spam/tests/: test_lambda_fn.py  test_s3.py
gmail_spam/utils/: get_logger.py
